# C-Practices

./: CMakeLists.txt  README.md
Chapter-01/: a.out  arrays.c  char_count.c  external.c  filecopying.c  hello.c  input_line.c  line_count.c  main.c  power.c  temperature.c  word_count.c
Chapter-02/: types.c
Chapter-03/: atoi.c  binSearch.c  itoa.c  reverse.c  shelsort.c  switches.c  trim.c
Chapter-04/: PolishCalculator.c  a.out  atof.c  conditional.c  macro.c  patterns.c
Chapter-05/: a.out  allocator.c  arrayInitialization.c  detab.c  echo.c  entab.c  expr.c  getint.c  getline.c  multidemiarrays.c  pattern.c  pointers.c  qsort.c  strcompare.c  strcopy.c  strlength.c  tail.c
Chapter-06/: a.out  distinct_words.c  get_word.c  noise_words.c  practice6.c  undef.c  variable_names.c
Chapter-07/: calculator.c  file_print.c  first_differ.c  is_upper.c  lower_upper.c  more_printf.c  more_scan.c  pattern_finding.c  print_non_graph.c
Chapter-08/: _iob.c  cat_rewrite.c  dirent.h  exercise_7.c  flush.c  fopen_rewrite.c  fseek.c  fsize.c  new_calloc.c  syscalls.h
